--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-
+    <a style="position: absolute; bottom: 2px; right: 2px; z-index: 999;" href="https://github.com/zerkotin/kanbanboard">kanbanboard</a>
   </body>
   <script src="app/index.js"></script>
 </html>
