added favicon and side navigation bar

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 
-  <title>Kanban Board</title>
+  <title>kanbanboard</title>
 
   <head>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="index.css"></link>
     <script src="vendors.js"></script>
   </head>
 
