fixed the kanbanboard link

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <a style="position: absolute; bottom: 2px; right: 2px; z-index: 999;" href="https://github.com/zerkotin/kanbanboard">kanbanboard</a>
+    <a style="position: fixed; bottom: 2px; right: 2px; z-index: 999;" href="https://github.com/zerkotin/kanbanboard">kanbanboard</a>
   </body>
   <script src="index.js"></script>
 </html>
